{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 36,
  "lineage": "86105067-34cc-40e8-54db-a5562c25baad",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev_proj_1_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:loadbalancer/app/dev-proj-1-alb/e23d60e1713dd22a",
            "arn_suffix": "app/dev-proj-1-alb/e23d60e1713dd22a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-proj-1-alb-2047328916.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:loadbalancer/app/dev-proj-1-alb/e23d60e1713dd22a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-proj-1-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-0d5751271acde84f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03fe0a5d52f38c50f"
              },
              {
                "subnet_id": "subnet-07640baefabba75c8"
              }
            ],
            "subnets": [
              "subnet-03fe0a5d52f38c50f",
              "subnet-07640baefabba75c8"
            ],
            "tags": {
              "Name": "example-lb"
            },
            "tags_all": {
              "Name": "example-lb"
            },
            "vpc_id": "vpc-0d43f3a6f1b9d258b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:loadbalancer/app/dev-proj-1-alb/e23d60e1713dd22a"
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_proj_1_lb_https_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:listener/app/dev-proj-1-alb/e23d60e1713dd22a/86205b869bac4ed9",
            "certificate_arn": "arn:aws:acm:eu-west-1:845989089095:certificate/d742798a-8aeb-48b7-95f9-6a3738634322",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:listener/app/dev-proj-1-alb/e23d60e1713dd22a/86205b869bac4ed9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:loadbalancer/app/dev-proj-1-alb/e23d60e1713dd22a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-FS-1-2-Res-2019-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:listener/app/dev-proj-1-alb/e23d60e1713dd22a/86205b869bac4ed9"
          },
          "dependencies": [
            "module.alb.aws_lb.dev_proj_1_lb",
            "module.aws_ceritification_manager.aws_acm_certificate.dev_proj_1_acm_arn",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_proj_1_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:listener/app/dev-proj-1-alb/e23d60e1713dd22a/b3058b6ce5c69ee6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:listener/app/dev-proj-1-alb/e23d60e1713dd22a/b3058b6ce5c69ee6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:loadbalancer/app/dev-proj-1-alb/e23d60e1713dd22a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:listener/app/dev-proj-1-alb/e23d60e1713dd22a/b3058b6ce5c69ee6"
          },
          "dependencies": [
            "module.alb.aws_lb.dev_proj_1_lb",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_proj_1_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21-20250808101630889100000002",
            "port": 8080,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21",
            "target_id": "i-05620cba25f6d652d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01f23391a59163da9",
            "arn": "arn:aws:ec2:eu-west-1:845989089095:instance/i-05620cba25f6d652d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05620cba25f6d652d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2c900f45e87f727",
            "private_dns": "ip-11-0-1-7.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.7",
            "public_ip": "54.229.92.191",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-085a8f1ade262a0e9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07640baefabba75c8",
            "tags": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tags_all": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010453f949d56c878",
              "sg-0d5751271acde84f8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_proj_1_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21",
            "arn_suffix": "targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:845989089095:loadbalancer/app/dev-proj-1-alb/e23d60e1713dd22a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_proj_1_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21-20250808100146683400000002",
            "port": 8080,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:845989089095:targetgroup/jenkins-lb-target-group/44c0f8a7532b1f21",
            "target_id": "i-05620cba25f6d652d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_proj_1_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:internet-gateway/igw-0254968f8441528be",
            "id": "igw-0254968f8441528be",
            "owner_id": "845989089095",
            "region": "eu-west-1",
            "tags": {
              "Name": "dev-proj-1-igw"
            },
            "tags_all": {
              "Name": "dev-proj-1-igw"
            },
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:route-table/rtb-0e0a133522ed40bf9",
            "id": "rtb-0e0a133522ed40bf9",
            "owner_id": "845989089095",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "dev-proj-1-private-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:route-table/rtb-0f5339a03e31c89f1",
            "id": "rtb-0f5339a03e31c89f1",
            "owner_id": "845989089095",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0254968f8441528be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-proj-1-public-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e198a6f98a9fa37",
            "region": "eu-west-1",
            "route_table_id": "rtb-0e0a133522ed40bf9",
            "subnet_id": "subnet-05b802f7a9e6fbea7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_subnets",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fa51ea0d13572ee",
            "region": "eu-west-1",
            "route_table_id": "rtb-0e0a133522ed40bf9",
            "subnet_id": "subnet-0a8c85af782f6768c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_subnets",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b6b1728eca0c3a9",
            "region": "eu-west-1",
            "route_table_id": "rtb-0f5339a03e31c89f1",
            "subnet_id": "subnet-07640baefabba75c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ff486fe89fe1ea",
            "region": "eu-west-1",
            "route_table_id": "rtb-0f5339a03e31c89f1",
            "subnet_id": "subnet-03fe0a5d52f38c50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:subnet/subnet-05b802f7a9e6fbea7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b802f7a9e6fbea7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845989089095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "dev-proj-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-1"
            },
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:subnet/subnet-0a8c85af782f6768c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8c85af782f6768c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845989089095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "dev-proj-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-2"
            },
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:subnet/subnet-07640baefabba75c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07640baefabba75c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845989089095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "dev-proj-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-1"
            },
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:subnet/subnet-03fe0a5d52f38c50f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fe0a5d52f38c50f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "845989089095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "dev-proj-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-2"
            },
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_proj_1_vpc_eu_central_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:vpc/vpc-0d43f3a6f1b9d258b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0be087c2707e818b4",
            "default_route_table_id": "rtb-0c4379bfb5707bcfc",
            "default_security_group_id": "sg-0dfb126a3bd404f3c",
            "dhcp_options_id": "dopt-065a4cac995c4c5a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d43f3a6f1b9d258b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c4379bfb5707bcfc",
            "owner_id": "845989089095",
            "region": "eu-west-1",
            "tags": {
              "Name": "dev-proj-jenkins-eu-west-vpc-1"
            },
            "tags_all": {
              "Name": "dev-proj-jenkins-eu-west-vpc-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:security-group/sg-010453f949d56c878",
            "description": "Enable the Port 8080 for jenkins",
            "egress": [],
            "id": "sg-010453f949d56c878",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 port to access jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "845989089095",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:845989089095:security-group/sg-0d5751271acde84f8",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5751271acde84f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "845989089095",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d43f3a6f1b9d258b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    }
  ]
}